kubernetes/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "false"
  name: solar-system
  namespace: _{_NAMESPACE_}_
spec:
    rules:
    - host: solar-system-a57febd2dc6524b38995a204b169ab1f-838163486.us-east-1.elb.amazonaws.com.nip.io
      http:
        paths:
        - backend:
            service:
              name: solar-system
              port:
                number: 3000
          path: /
          pathType: Prefix
    # tls:
    # - hosts:
    #   - solar-system-a57febd2dc6524b38995a204b169ab1f-838163486.us-east-1.elb.amazonaws.com.nip.io
    #   secretName: ingress-local-tls
